--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,11 @@
     <artifactId>poi</artifactId>
     <version>4.1.2</version>
 </dependency>
-
+<dependency>
+<groupId>io.appium</groupId>
+<artifactId>java-client</artifactId>
+<version>7.3.0</version>
+</dependency>
     </dependencies>
   
 </project>
